<resources>
    <!-- Strings -->
    <string name="app_name">Jobee</string>
    <string name="notification_new">New</string>
    <string name="application_sent">Application Sent</string>
    <string name="application_accepted">Application Accepted</string>
    <string name="application_rejected">Application Rejected</string>
    <string name="application_pending">Application Pending</string>
    <string name="text_welcome_back">Welcome Back 👋</string>
    <string name="text_recommendation">Recommendation</string>
    <string name="text_see_all">See All</string>
    <string name="text_recent_jobs">Recent Jobs</string>
    <string name="text_all_category">All</string>
    <string name="text_english_us">English (US)</string>
    <string name="text_sign_in_title">Welcome to Jobee!</string>
    <string name="text_sign_in_caption">Welcome to Jobee! Let’s find your next job</string>
    <string name="text_application_status">Your Application Status</string>
    <string name="text_job_description">Job Description</string>
    <string name="text_welcome_chat_title">Welcome to Jobee Chat</string>
    <string name="text_welcome_chat_description">we’re here to help you find your next opportunity!</string>
    <string name="text_not_found_jobs_title">No matching results</string>
    <string name="text_not_found_jobs_description">We couldn’t find any jobs that match your current filters. Modify your search criteria to discover more positions.</string>

    <!-- ActionBar -->
    <string name="action_bar_notifications">Notifications</string>
    <string name="action_bar_saved_jobs">Saved Jobs</string>
    <string name="action_bar_applications">Applications</string>
    <string name="action_bar_messages">Messages</string>
    <string name="action_bar_profile">Profile</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_application_status">Application Stage</string>

    <!-- Tabs -->
    <string name="tab_general_notifications">General</string>
    <string name="tab_application_notifications">Applications</string>

    <!-- Buttons -->
    <string name="btn_save_profile">Save Profile</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_apply_job">Apply Job</string>

    <!-- Hints -->
    <string name="hint_chat_form">Type a message…</string>
    <string name="hint_search_for_job">Search for a job…</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_email">Enter your email address</string>

    <!-- Labels -->
    <string name="label_username">Your Username</string>
    <string name="label_email">Your Email Address</string>

    <!-- Messages -->
    <string name="message_profile_saved">Profile saved successfully</string>

    <!-- Content descriptions -->
    <string name="cd_back_navigation">Back navigation</string>
    <string name="cd_record_voice">Record voice message</string>
    <string name="cd_send_message">Send message</string>
    <string name="cd_choose_emoji">Choose emoji</string>
    <string name="cd_open_camera">Open camera</string>
    <string name="cd_save_job">Save job</string>
    <string name="cd_unsave_job">Unsave job</string>
    <string name="cd_avatar">User avatar</string>
    <string name="cd_see_notifications">See notifications</string>
    <string name="cd_search">Search</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_share">Share</string>
    <string name="cd_call">Call</string>
    <string name="cd_video_call">Video call</string>
    <string name="cd_sort_jobs">Sort jobs</string>

    <!-- Dummies strings -->
    <string name="dummy_notification_title">Security Updates!</string>
    <string name="dummy_notification_date">20 Dec, 2022</string>
    <string name="dummy_notification_time">20:49 PM</string>
    <string name="dummy_notification_description">Now Jobee has a Two-Factor Authentication. Try it now to make your account more secure.</string>
    <string name="dummy_application_job">UX Designer &amp; Developer</string>
    <string name="dummy_application_company">Pinterest</string>
    <string name="dummy_chat_company">Google LLC</string>
    <string name="dummy_chat_message">Will the contract be sent?</string>
    <string name="dummy_chat_time">Yesterday</string>
    <string name="dummy_chat_unread_count">2</string>
    <string name="dummy_job_title">Sales &amp; Marketing</string>
    <string name="dummy_job_company">Apple Inc.</string>
    <string name="dummy_job_location">Chicago, United States</string>
    <string name="dummy_job_salary">$5,000 - $12,000 /month</string>
    <string name="dummy_job_posted_at">Posted at 20 Dec, 2022 – 20:49 PM</string>
    <string name="dummy_username">Olivia Brooks</string>
    <string name="dummy_email">olivia.brooks@gmail.com</string>
    <string name="dummy_job_description">We are looking for a motivated and friendly Customer Support Specialist to join our team. You will be responsible for assisting users, answering questions, and ensuring they have the best experience using Jobee.</string>
    <string name="dummy_jobs_count">3,779 founds</string>

    <!-- Format -->
    <string name="job_salary_format">$%1$d - $%2$d /year</string>
    <string name="job_pasted_at_format">Posted at %1s</string>
    <string name="jobs_founds_format">%1d jobs founds</string>

    <!-- Others -->
    <string name="divider_line">|</string>
</resources>