<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatar_image"
        style="@style/Widget.Avatar.Medium"
        android:contentDescription="@string/cd_avatar"
        android:src="@drawable/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dummy_username"
        android:textAppearance="@style/TextAppearance.Heading5"
        android:textColor="?attr/colorNeutralHighest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar_image"
        app:layout_constraintTop_toTopOf="@id/avatar_image" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dummy_email"
        android:textAppearance="@style/TextAppearance.Body.Large"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintEnd_toEndOf="@id/username_text"
        app:layout_constraintStart_toStartOf="@id/username_text"
        app:layout_constraintTop_toBottomOf="@id/username_text" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_gap"
        android:text="@string/label_username"
        android:textAppearance="@style/TextAppearance.Body.Medium.Medium"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_image" />

    <com.bluerose.jobee.ui.components.TextField
        android:id="@+id/username_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:action="clear"
        app:hint="@string/hint_username"
        app:icon="@drawable/ic_user_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_email"
        android:textAppearance="@style/TextAppearance.Body.Medium.Medium"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text_field" />

    <com.bluerose.jobee.ui.components.TextField
        android:id="@+id/email_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:action="clear"
        app:hint="@string/hint_email"
        app:icon="@drawable/ic_letter_bold"
        app:inputType="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label" />

    <Button
        style="@style/Widget.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>