<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_jobee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_gap"
        android:text="@string/text_sign_in_title"
        android:textAppearance="@style/TextAppearance.Heading4"
        android:textColor="?attr/colorNeutralHighest"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="@id/logo_image"
        app:layout_constraintTop_toBottomOf="@id/logo_image" />

    <TextView
        android:id="@+id/caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_sign_in_caption"
        android:textAppearance="@style/TextAppearance.Body.Large"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintEnd_toEndOf="@id/title_text"
        app:layout_constraintStart_toStartOf="@id/title_text"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/label_username"
        android:textAppearance="@style/TextAppearance.Body.Medium.Medium"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caption_text" />

    <com.bluerose.jobee.ui.components.TextField
        android:id="@+id/username_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:action="clear"
        app:hint="@string/hint_username"
        app:icon="@drawable/ic_user_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_email"
        android:textAppearance="@style/TextAppearance.Body.Medium.Medium"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text_field" />

    <com.bluerose.jobee.ui.components.TextField
        android:id="@+id/email_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:action="clear"
        app:hint="@string/hint_email"
        app:icon="@drawable/ic_letter_bold"
        app:inputType="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Widget.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_field" />

</androidx.constraintlayout.widget.ConstraintLayout>
