<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="-16dp"
    android:layout_marginEnd="-16dp"
    android:layout_marginBottom="8dp"
    android:clipToPadding="false"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/avatar_image"
        style="@style/Widget.Avatar.Small"
        android:contentDescription="@string/cd_avatar"
        android:src="@drawable/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/dummy_username"
        android:textAppearance="@style/TextAppearance.Body.Large.Semibold"
        android:textColor="?attr/colorNeutralHighest"
        app:layout_constraintStart_toEndOf="@id/avatar_image"
        app:layout_constraintTop_toTopOf="@id/avatar_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_welcome_back"
        android:textAppearance="@style/TextAppearance.Body.Small"
        android:textColor="?attr/colorNeutralLow"
        app:layout_constraintStart_toStartOf="@id/username_text"
        app:layout_constraintTop_toBottomOf="@id/username_text" />

    <ImageButton
        android:id="@+id/notification_action"
        style="@style/Widget.Button.IconButton.Secondary.Rounded"
        android:contentDescription="@string/cd_see_notifications"
        android:src="@drawable/ic_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bluerose.jobee.ui.components.TextField
        android:id="@+id/job_search_field"
        style="@style/Widget.SearchField.Base"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_gap"
        app:hint="@string/hint_search_for_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_image" />

    <TextView
        android:id="@+id/recommendation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_gap"
        android:text="@string/text_recommendation"
        android:textAppearance="@style/TextAppearance.Heading6"
        android:textColor="?attr/colorNeutralHighest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_search_field"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/recommendation_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_see_all"
        android:textAppearance="@style/TextAppearance.Body.Large.Semibold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/recommendation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recommendation_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendation_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="@dimen/section_gap"
        android:layout_marginEnd="-16dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendation_text" />

    <TextView
        android:id="@+id/recent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_gap"
        android:text="@string/text_recent_jobs"
        android:textAppearance="@style/TextAppearance.Heading6"
        android:textColor="?attr/colorNeutralHighest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendation_recycler"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/recent_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_see_all"
        android:textAppearance="@style/TextAppearance.Body.Large.Semibold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/recent_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recent_text" />

    <HorizontalScrollView
        android:id="@+id/recent_chip_group_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="@dimen/section_gap"
        android:layout_marginEnd="-16dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_text"
        tools:viewBindingIgnore="true">

        <com.bluerose.jobee.ui.components.ChipGroup
            android:id="@+id/recent_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_gap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_chip_group_wrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>
