<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ripple_card_clickable"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_pinterest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="company_name,message"
        app:flow_horizontalAlign="start"
        app:flow_verticalGap="6dp"
        app:layout_constraintBottom_toBottomOf="@id/company_logo"
        app:layout_constraintEnd_toStartOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/company_logo"
        app:layout_constraintTop_toTopOf="@id/company_logo"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dummy_chat_company"
        android:textAppearance="@style/TextAppearance.Heading6"
        android:textColor="?attr/colorNeutralHighest" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_chat_message"
        android:textAppearance="@style/TextAppearance.Body.Large"
        android:textColor="?attr/colorNeutral" />

    <TextView
        android:id="@+id/unread_message_count"
        style="@style/Widget.Tag.Secondary.Circle"
        android:text="@string/dummy_chat_unread_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/flow" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_chat_time"
        android:textAppearance="@style/TextAppearance.Body.Medium"
        android:textColor="?attr/colorNeutral"
        app:layout_constraintBottom_toBottomOf="@id/flow"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>